Ion's release notes.
[SVN r84671]

--- a/users/history/version_1_54_0.html
+++ b/users/history/version_1_54_0.html
@@ -462,6 +462,40 @@
       </li>
       <li>
         <div>
+          <span class="library"><a href="/doc/libs/1_54_0_beta1/libs/container/">Container</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Speed improvements in <code><span class="identifier">vector</span></code>
+                constructors/copy/move/swap, dispatching to memcpy when possible.
+              </div>
+            </li>
+            <li>
+              <div>
+                Support for <code><span class="identifier">BOOST_NO_EXCEPTIONS</span></code>
+                <a href="https://svn.boost.org/trac/boost/ticket/7227">#7227</a>.
+              </div>
+            </li>
+            <li>
+              <div>
+                Fixed bugs <a href="https://svn.boost.org/trac/boost/ticket/7921">#7921</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/7969">#7969</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/8118">#8118</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/8294">#8294</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/8553">#8553</a>.
+              </div>
+            </li>
+            <li>
+              <div>
+                Added experimental <code><span class="identifier">static_vector</span></code>
+                class.
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
           <span class="library"><a href="/doc/libs/1_54_0_beta1/libs/context/">Context</a>:</span>
           <ul>
             <li>
@@ -699,6 +733,56 @@
       </li>
       <li>
         <div>
+          <span class="library"><a href="/doc/libs/1_54_0_beta1/libs/interprocess/">Interprocess</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Added support for platform-specific flags to mapped_region (ticket
+                #8030)
+              </div>
+            </li>
+            <li>
+              <div>
+                Fixed bugs <a href="https://svn.boost.org/trac/boost/ticket/7484">#7484</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/7598">#7598</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/7682">#7682</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/7923">#7923</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/7924">#7924</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/7928">#7928</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/7936">#7936</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/8521">#8521</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/8595">#8595</a>.
+              </div>
+            </li>
+            <li>
+              <div>
+                <strong>ABI breaking</strong>: Changed bootstamp
+                function in Windows to use EventLog service start time as system
+                bootup time. Previously used <code><span class="identifier">LastBootupTime</span></code>
+                from WMI was unstable with time synchronization and hibernation and
+                unusable in practice. If you really need to obtain pre Boost 1.54
+                behaviour define <code><span class="identifier">BOOST_INTERPROCESS_BOOTSTAMP_IS_LASTBOOTUPTIME</span></code>
+                from command line or <code><span class="identifier">detail</span><span class="special">/</span><span class="identifier">workaround</span><span class="special">.</span><span class="identifier">hpp</span></code>.
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/doc/libs/1_54_0_beta1/libs/intrusive/">Intrusive</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Added <code><span class="identifier">BOOST_NO_EXCEPTIONS</span></code>
+                support (bug <a href="https://svn.boost.org/trac/boost/ticket/7849">#7849</a>).
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
           <span class="library"><a href="/doc/libs/1_54_0_beta1/libs/iostreams/">Iostreams</a>:</span>
           <ul>
             <li>
@@ -834,6 +918,19 @@
                 the incomplete beta in tricky regions where the derivative is flatlining.
                 Example is computing the quantile of the Fisher F distribution for
                 probabilities smaller than machine epsilon. See ticket <a href="https://svn.boost.org/trac/boost/ticket/8314">#8314</a>.
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/doc/libs/1_54_0_beta1/libs/move/">Move</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Fixed bugs <a href="https://svn.boost.org/trac/boost/ticket/7969">#7969</a>),
+                <a href="https://svn.boost.org/trac/boost/ticket/8231">#8231</a>).
               </div>
             </li>
           </ul>
@@ -1540,4 +1637,3 @@
   </div>
 </body>
 </html>
-<!-- Updated. -->
