Extra ticket for graph + rebuild release notes.
[SVN r84738]

--- a/users/history/version_1_54_0.html
+++ b/users/history/version_1_54_0.html
@@ -466,6 +466,13 @@
           <ul>
             <li>
               <div>
+                Added experimental <code><span class="identifier">static_vector</span></code>
+                class, based on Andrew Hundt's and Adam Wulkiewicz's high-performance
+                <code><span class="identifier">varray</span></code> class.
+              </div>
+            </li>
+            <li>
+              <div>
                 Speed improvements in <code><span class="identifier">vector</span></code>
                 constructors/copy/move/swap, dispatching to memcpy when possible.
               </div>
@@ -483,12 +490,6 @@
                 <a href="https://svn.boost.org/trac/boost/ticket/8118">#8118</a>,
                 <a href="https://svn.boost.org/trac/boost/ticket/8294">#8294</a>,
                 <a href="https://svn.boost.org/trac/boost/ticket/8553">#8553</a>.
-              </div>
-            </li>
-            <li>
-              <div>
-                Added experimental <code><span class="identifier">static_vector</span></code>
-                class.
               </div>
             </li>
           </ul>
@@ -702,7 +703,7 @@
               <div>
                 Bugs fixed from Trac: <a href="https://svn.boost.org/trac/boost/ticket/6780">#6780</a>, <a href="https://svn.boost.org/trac/boost/ticket/7016">#7016</a>, <a href="https://svn.boost.org/trac/boost/ticket/7155">#7155</a>, <a href="https://svn.boost.org/trac/boost/ticket/7845">#7845</a>,
                 <a href="https://svn.boost.org/trac/boost/ticket/7863">#7863</a>, <a href="https://svn.boost.org/trac/boost/ticket/7877">#7877</a>, <a href="https://svn.boost.org/trac/boost/ticket/8166">#8166</a>, <a href="https://svn.boost.org/trac/boost/ticket/8192">#8192</a>, <a href="https://svn.boost.org/trac/boost/ticket/8398">#8398</a>, <a href="https://svn.boost.org/trac/boost/ticket/8411">#8411</a>,
-                <a href="https://svn.boost.org/trac/boost/ticket/8427">#8427</a>, <a href="https://svn.boost.org/trac/boost/ticket/8428">#8428</a>, <a href="https://svn.boost.org/trac/boost/ticket/8434">#8434</a>, <a href="https://svn.boost.org/trac/boost/ticket/8490">#8490</a>.
+                <a href="https://svn.boost.org/trac/boost/ticket/8427">#8427</a>, <a href="https://svn.boost.org/trac/boost/ticket/8428">#8428</a>, <a href="https://svn.boost.org/trac/boost/ticket/8434">#8434</a>, <a href="https://svn.boost.org/trac/boost/ticket/8490">#8490</a>, <a href="https://svn.boost.org/trac/boost/ticket/8681">#8681</a>.
               </div>
             </li>
             <li>
