Range release notes.
[SVN r84905]

--- a/users/history/version_1_54_0.html
+++ b/users/history/version_1_54_0.html
@@ -1068,6 +1068,57 @@
       </li>
       <li>
         <div>
+          <span class="library"><a href="/doc/libs/1_54_0_beta1/libs/range/">Range</a>:</span>
+          <ul>
+            <li>
+              <div>
+                <em>Bug fixes:</em>
+                <ul>
+                  <li>
+                    <div>
+                      <a href="https://svn.boost.org/trac/boost/ticket/6944">#6944</a> Some Range concepts use the incorrect Iterator concept
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="https://svn.boost.org/trac/boost/ticket/7407">#7407</a> istream_range does not compile with wcin
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="https://svn.boost.org/trac/boost/ticket/7408">#7408</a> istream_range should not pull istream
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="https://svn.boost.org/trac/boost/ticket/7731">#7731</a> irange doesn't end iteration properly when step_size
+                      is 3 or more
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="https://svn.boost.org/trac/boost/ticket/7827">#7827</a> [range] cant compile r | indexed to range algorithm
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="https://svn.boost.org/trac/boost/ticket/8338">#8338</a> Iterator range does not work with pointer to array
+                      as iterator
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="https://svn.boost.org/trac/boost/ticket/8453">#8453</a> Incorrect configuration macro BOOST_NO_PARTIAL_TEMPLATE_SPECIALIZATION
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
           <span class="library"><a href="/doc/libs/1_54_0_beta1/libs/signals/">Signals</a>:</span>
           <ul>
             <li>
