--- a/users/history/version_1_54_0.html
+++ b/users/history/version_1_54_0.html
@@ -3,7 +3,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-  <title>Version 1.54.0 beta</title>
+  <title>Version 1.54.0</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <link rel="icon" href="/favicon.ico" type="image/ico" />
   <link rel="stylesheet" type="text/css" href="/style-v2/section-boost.css" />
@@ -34,14 +34,16 @@
             <div class="section-title">
               <h1>Version 1.54.0</h1>
             </div>
-            <div class="section-note"><p>Note: This version is at an early stage in its release cycle. The information listed below is incomplete and some of the documentation links may not work yet.</p></div>
+
             <div class="section-body">
               <h2><span class=
-              "news-title">Version 1.54.0 beta</span></h2>
+              "news-title">Version 1.54.0</span></h2>
 
-              <p><span class=news-date">In Progress</span></p>
+              <p><span class=news-date">July  1st, 2013 17:10 GMT</span></p>
               <p><a href="/doc/libs/1_54_0/">Documentation</a>
-              <p><span class="news-download"><a href="http://sourceforge.net/projects/boost/files/boost/1.54.0.beta.1/">Download this beta release.</a></span></p>
+              <table class="download-table"><caption>Downloads</caption><tr><th scope="col">Platform</th><th scope="col">File</th></tr>
+<tr><th scope="row" rowspan="2">unix</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.54.0/boost_1_54_0.tar.bz2/download">boost_1_54_0.tar.bz2</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.54.0/boost_1_54_0.tar.gz/download">boost_1_54_0.tar.gz</a></td></tr>
+<tr><th scope="row" rowspan="2">windows</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.54.0/boost_1_54_0.7z/download">boost_1_54_0.7z</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.54.0/boost_1_54_0.zip/download">boost_1_54_0.zip</a></td></tr></table>
               <div class="news-description">
                 <div class="description">
 
@@ -53,10 +55,10 @@
       <h3><span class="link">Supported CPUs</span></h3>
       <p>
         Boost no longer supports the 80386 target CPU, the minimum x86 32-bit target
-        is i486. The 80386 target was not properly supported by <a href="/doc/libs/1_54_0/libs/smart_ptr/">Boost.SmartPtr</a>
-        and <a href="/doc/libs/1_54_0/libs/atomic/">Boost.Atomic</a> (as well as the libraries
+        is i486. The 80386 target was not properly supported by <a href="/libs/smart_ptr/">Boost.SmartPtr</a>
+        and <a href="/libs/atomic/">Boost.Atomic</a> (as well as the libraries
         that used them internally) even before this release. Some Boost libraries
-        may have higher requirements on the minimum target CPU (like <a href="/doc/libs/1_54_0/libs/log/">Boost.Log</a>
+        may have higher requirements on the minimum target CPU (like <a href="/libs/log/">Boost.Log</a>
         for example), see the respective library documentation for details.
       </p>
       <p>
@@ -128,9 +130,9 @@
       <h3><span class="link">Signals deprecated</span></h3>
       <p>
         Boost.Signals is no longer being actively maintained, so it has been deprecated.
-        Do not use Boost.Signals for new development (use <a href="/doc/libs/1_54_0/libs/signals2/">Boost.Signals2</a>
+        Do not use Boost.Signals for new development (use <a href="/libs/signals2/">Boost.Signals2</a>
         instead). If you have existing Boost.Signals-based code, it will continue
-        to work, but consider moving to Boost.Signals2. There is <a href="/doc/libs/1_54_0/doc/html/signals2/api_changes.html#signals2.porting">a
+        to work, but consider moving to Boost.Signals2. There is <a href="/doc/html/signals2/api_changes.html#signals2.porting">a
         porting guide</a> in the Signals2 documentation.
       </p>
     </div>
@@ -140,21 +142,21 @@
     <ul>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_54_0/libs/log/">Log</a>:</span>
+          <span class="library"><a href="/libs/log/">Log</a>:</span>
   Logging library, from Andrey
           Semashev.
         </div>
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_54_0/libs/tti/">TTI</a>:</span>
+          <span class="library"><a href="/libs/tti/">TTI</a>:</span>
   Type Traits Introspection library,
           from Edward Diener.
         </div>
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_54_0/libs/type_erasure/">Type Erasure</a>:</span>
+          <span class="library"><a href="/libs/type_erasure/">Type Erasure</a>:</span>
   Runtime polymorphism
           based on concepts.
         </div>
@@ -166,7 +168,7 @@
     <ul>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_54_0/libs/accumulators/">Accumulators</a>:</span>
+          <span class="library"><a href="/libs/accumulators/">Accumulators</a>:</span>
           <ul>
             <li>
               <div>
@@ -183,7 +185,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_54_0/libs/algorithm/">Algorithm</a>:</span>
+          <span class="library"><a href="/libs/algorithm/">Algorithm</a>:</span>
           <ul>
             <li>
               <div>
@@ -206,7 +208,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_54_0/libs/any/">Any</a>:</span>
+          <span class="library"><a href="/libs/any/">Any</a>:</span>
           <ul>
             <li>
               <div>
@@ -231,7 +233,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_54_0/libs/asio/">Asio</a>:</span>
+          <span class="library"><a href="/libs/asio/">Asio</a>:</span>
           <ul>
             <li>
               <div>
@@ -419,7 +421,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_54_0/libs/chrono/">Chrono</a>:</span>
+          <span class="library"><a href="/libs/chrono/">Chrono</a>:</span>
           <ul>
             <li>
               <div>
@@ -464,7 +466,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_54_0/libs/circular_buffer">Circular Buffer</a>:</span>
+          <span class="library"><a href="/libs/circular_buffer">Circular Buffer</a>:</span>
           <ul>
             <li>
               <div>
@@ -476,7 +478,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_54_0/libs/container/">Container</a>:</span>
+          <span class="library"><a href="/libs/container/">Container</a>:</span>
           <ul>
             <li>
               <div>
@@ -511,7 +513,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_54_0/libs/context/">Context</a>:</span>
+          <span class="library"><a href="/libs/context/">Context</a>:</span>
           <ul>
             <li>
               <div>
@@ -523,7 +525,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_54_0/libs/coroutine/">Coroutine</a>:</span>
+          <span class="library"><a href="/libs/coroutine/">Coroutine</a>:</span>
           <ul>
             <li>
               <div>
@@ -583,7 +585,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_54_0/libs/geometry/">Geometry</a>:</span>
+          <span class="library"><a href="/libs/geometry/">Geometry</a>:</span>
           <ul>
             <li>
               <div>
@@ -711,7 +713,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_54_0/libs/graph">Graph</a>:</span>
+          <span class="library"><a href="/libs/graph">Graph</a>:</span>
           <ul>
             <li>
               <div>
@@ -748,7 +750,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_54_0/libs/interprocess/">Interprocess</a>:</span>
+          <span class="library"><a href="/libs/interprocess/">Interprocess</a>:</span>
           <ul>
             <li>
               <div>
@@ -785,7 +787,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_54_0/libs/intrusive/">Intrusive</a>:</span>
+          <span class="library"><a href="/libs/intrusive/">Intrusive</a>:</span>
           <ul>
             <li>
               <div>
@@ -798,7 +800,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_54_0/libs/iostreams/">Iostreams</a>:</span>
+          <span class="library"><a href="/libs/iostreams/">Iostreams</a>:</span>
           <ul>
             <li>
               <div>
@@ -821,7 +823,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_54_0/libs/conversion/lexical_cast.htm">Lexical cast</a>:</span>
+          <span class="library"><a href="/libs/conversion/lexical_cast.htm">Lexical cast</a>:</span>
           <ul>
             <li>
               <div>
@@ -858,7 +860,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_54_0/libs/math/">Math</a>:</span>
+          <span class="library"><a href="/libs/math/">Math</a>:</span>
           <ul>
             <li>
               <div>
@@ -940,7 +942,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_54_0/libs/msm/">Meta State Machine</a>:</span>
+          <span class="library"><a href="/libs/msm/">Meta State Machine</a>:</span>
           <ul>
             <li>
               <div>
@@ -962,7 +964,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_54_0/libs/move/">Move</a>:</span>
+          <span class="library"><a href="/libs/move/">Move</a>:</span>
           <ul>
             <li>
               <div>
@@ -975,7 +977,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_54_0/libs/multiprecision/">Multiprecision</a>:</span>
+          <span class="library"><a href="/libs/multiprecision/">Multiprecision</a>:</span>
           <ul>
             <li>
               <div>
@@ -1038,7 +1040,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_54_0/libs/polygon/">Polygon</a>:</span>
+          <span class="library"><a href="/libs/polygon/">Polygon</a>:</span>
           <ul>
             <li>
               <div>
@@ -1055,7 +1057,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_54_0/libs/property_map/">PropertyMap</a>:</span>
+          <span class="library"><a href="/libs/property_map/">PropertyMap</a>:</span>
           <ul>
             <li>
               <div>
@@ -1068,7 +1070,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_54_0/libs/range/">Range</a>:</span>
+          <span class="library"><a href="/libs/range/">Range</a>:</span>
           <ul>
             <li>
               <div>
@@ -1119,11 +1121,11 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_54_0/libs/signals/">Signals</a>:</span>
+          <span class="library"><a href="/libs/signals/">Signals</a>:</span>
           <ul>
             <li>
               <div>
-                No longer actively maintained, so it is deprecated. Use <a href="/doc/libs/1_54_0/libs/signals2">Signals2</a>
+                No longer actively maintained, so it is deprecated. Use <a href="/libs/signals2">Signals2</a>
                 for new development.
               </div>
             </li>
@@ -1132,7 +1134,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_54_0/libs/thread/">Thread</a>:</span>
+          <span class="library"><a href="/libs/thread/">Thread</a>:</span>
           <ul>
             <li>
               <div>
@@ -1316,7 +1318,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_54_0/libs/type_traits/">Type Traits</a>:</span>
+          <span class="library"><a href="/libs/type_traits/">Type Traits</a>:</span>
           <ul>
             <li>
               <div>
@@ -1350,7 +1352,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_54_0/libs/unordered/">Unordered</a>:</span>
+          <span class="library"><a href="/libs/unordered/">Unordered</a>:</span>
           <ul>
             <li>
               <div>
@@ -1363,7 +1365,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_54_0/libs/utility/">Utility</a>:</span>
+          <span class="library"><a href="/libs/utility/">Utility</a>:</span>
           <ul>
             <li>
               <div>
@@ -1403,7 +1405,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_54_0/libs/variant/">Variant</a>:</span>
+          <span class="library"><a href="/libs/variant/">Variant</a>:</span>
           <ul>
             <li>
               <div>
@@ -1426,11 +1428,11 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_54_0/libs/wave/">Wave</a>:</span>
+          <span class="library"><a href="/libs/wave/">Wave</a>:</span>
           <ul>
             <li>
               <div>
-                See the <a href="/doc/libs/1_54_0/libs/wave/ChangeLog">Changelog</a> for details.
+                See the <a href="/libs/wave/ChangeLog">Changelog</a> for details.
               </div>
             </li>
           </ul>
@@ -1438,7 +1440,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_54_0/libs/xpressive">xpressive</a>:</span>
+          <span class="library"><a href="/libs/xpressive">xpressive</a>:</span>
           <ul>
             <li>
               <div>
@@ -1469,7 +1471,7 @@
     <ul>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_54_0/libs/numeric/ublas">uBLAS</a>:</span>
+          <span class="library"><a href="/libs/numeric/ublas">uBLAS</a>:</span>
           <ul>
             <li>
               <div>
