Add 1.54.0 patches to release notes.
[SVN r84963]

--- a/users/history/version_1_54_0.html
+++ b/users/history/version_1_54_0.html
@@ -49,6 +49,21 @@
 
 
 
+  <div id="version_1_54_0.patches">
+    <h3><span class="link">Patches</span></h3>
+    <ul>
+      <li>
+        <div>
+          <a href="/patches/1_54_0/001-coroutine.patch">Coroutine patch</a>
+        </div>
+      </li>
+      <li>
+        <div>
+          <a href="/patches/1_54_0/002-coroutine.patch">Date Time patch</a>
+        </div>
+      </li>
+    </ul>
+  </div>
   <div id="version_1_54_0.news">
     <h3><span class="link">News</span></h3>
     <div id="version_1_54_0.news.supported_cpus">
