More patches + patch description.
Generated using:

{{{
svn log -c $1 https://svn.boost.org/svn/boost/branches/maintenance
svn diff -c $1 https://svn.boost.org/svn/boost/branches/maintenance \
    | filterdiff --clean
}}}

where $1 is the changeset.



[SVN r84970]

--- a/patches/index.html
+++ b/patches/index.html
@@ -29,12 +29,25 @@ http://www.boost.org/development/website_updating.html
             </div>
 
             <div class="section-body">
-                <h2>1.54.0</h2>
+              <p>These are patches from library authors which were found too
+              late to be fixed in the 1.54.0 release. Be careful as they have
+              not been through the normal testing process.</p>
 
-                <ul>
-                    <li><a href="1_54_0/001-coroutine.patch">1_54_0/001-coroutine.patch</a></li>
-                    <li><a href="1_54_0/002-date-time.patch">1_54_0/002-date-time.patch</a></li>
-                </ul>
+              <h2>1.54.0</h2>
+
+              <ul>
+                <li><a href=
+                "1_54_0/001-coroutine.patch">1_54_0/001-coroutine.patch</a></li>
+
+                <li><a href=
+                "1_54_0/002-date-time.patch">1_54_0/002-date-time.patch</a></li>
+
+                <li><a href=
+                "1_54_0/003-log.patch">1_54_0/003-log.patch</a></li>
+
+                <li><a href=
+                "1_54_0/004-thread.patch">1_54_0/004-thread.patch</a></li>
+              </ul>
             </div>
           </div>
         </div>
