--- a/users/history/version_1_54_0.html
+++ b/users/history/version_1_54_0.html
@@ -51,7 +51,12 @@
 
   <div id="version_1_54_0.patches">
     <h3><span class="link">Patches</span></h3>
-    <ul>
+    <p>
+      These are patches from library authors which were found too late to be fixed
+      in the 1.54.0 release. Be careful as they have not been through the normal
+      testing process.
+    </p>
+    <ol>
       <li>
         <div>
           <a href="/patches/1_54_0/001-coroutine.patch">Coroutine patch</a>
@@ -62,7 +67,17 @@
           <a href="/patches/1_54_0/002-date-time.patch">Date Time patch</a>
         </div>
       </li>
-    </ul>
+      <li>
+        <div>
+          <a href="/patches/1_54_0/003-log.patch">Log patch</a>
+        </div>
+      </li>
+      <li>
+        <div>
+          <a href="/patches/1_54_0/004-thread.patch">Thread patch</a>
+        </div>
+      </li>
+    </ol>
   </div>
   <div id="version_1_54_0.news">
     <h3><span class="link">News</span></h3>
