--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -348,6 +348,19 @@ http://www.boost.org/development/website_updating.html
                   </tr>
                 </thead>
 
+		  <tr>
+                    <td>Boost 1.54.0 Released</td>
+
+                    <td></td>
+
+                    <td>Marshall Clow</td>
+
+                    <td>July 1, 2013</td>
+
+                    <td><a href=
+                    "http://www.boost.org/users/news/version_1_54_0">Notes</a></td>
+                  </tr>
+
                   <tr>
                     <td>Review Wizard Status Report</td>
 
