Add concept check release note.

--- a/users/history/version_1_56_0.html
+++ b/users/history/version_1_56_0.html
@@ -61,6 +61,18 @@
     <ul>
       <li>
         <div>
+          <span class="library"><a href="/lib/concept_check/">Concept Check</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Fewer warnings (includes <a href="https://svn.boost.org/trac/boost/ticket/5012">#5012</a>).
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
           <em>TODO</em>
         </div>
       </li>
