Link to git inspect reports.

--- a/development/testing.html
+++ b/development/testing.html
@@ -151,8 +151,8 @@ http://www.boost.org/development/website_updating.html
                   trunk</a></td> -->
 
                   <td><a href=
-                  "http://boost.cowic.de/rc/docs-inspect-trunk.html">Main
-                  trunk</a></td>
+                  "http://boost.cowic.de/rc/docs-inspect-develop.html">Develop
+                  branch</a></td>
                 </tr>
 
                 <tr>
@@ -161,7 +161,7 @@ http://www.boost.org/development/website_updating.html
                   branch</a></td> -->
 
                   <td><a href=
-                  "http://boost.cowic.de/rc/docs-inspect-release.html">Release
+                  "http://boost.cowic.de/rc/docs-inspect-master.html">Master
                   branch</a></td>
                 </tr>
               </table>
