Change php minimum requirements to 5.3.

--- a/development/website_updating.html
+++ b/development/website_updating.html
@@ -331,7 +331,7 @@ tidy --tidy-mark no -i -wrap 78 -m -asxhtml --merge-divs no --merge-spans no --d
                 <li>
                   <p>Install and get working <a href=
                   "http://httpd.apache.org/">Apache 2.x.</a> and <a href=
-                  "http://php.net/">PHP 4.x or 5.x</a> (install PHP as an
+                  "http://php.net/">PHP 5.3 or later</a> (install PHP as an
                   Apache module, not as CGI).</p>
                 </li>
 
