--- a/community/groups.html
+++ b/community/groups.html
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
   <title>Boost Mailing Lists</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta http-equiv="Content-Type" content="text/html; charset=us-ascii" />
   <link rel="icon" href="/favicon.ico" type="image/ico" />
   <link rel="stylesheet" type="text/css" href=
   "/style-v2/section-community.css" />
@@ -83,90 +83,54 @@ http://www.boost.org/development/website_updating.html
               </div>
 
               <ul class="toc">
-                <li>
-                  <a href="#users">Users</a>
-                </li>
+                <li><a href="#users">Users</a></li>
 
                 <li>
                   <a href="#main">Developers</a>
 
                   <ul>
-                    <li>
-                      <a href="#archive">Archives</a>
-                    </li>
+                    <li><a href="#archive">Archives</a></li>
                   </ul>
                 </li>
 
-                <li>
-                  <a href="#announce">Announce</a>
-                </li>
+                <li><a href="#announce">Announce</a></li>
 
-                <li>
-                  <a href="#interest">Interest</a>
-                </li>
+                <li><a href="#interest">Interest</a></li>
 
                 <li>
                   <a href="#projects">Project-Specific</a>
 
                   <ul>
-                    <li>
-                      <a href="#jamboost">Boost.Build</a>
-                    </li>
+                    <li><a href="#jamboost">Boost.Build</a></li>
 
-                    <li>
-                      <a href="#cmake">Boost CMake</a>
-                    </li>
+                    <li><a href="#cmake">Boost CMake</a></li>
 
-                    <li>
-                      <a href="#cplussig">Python C++-Sig (for
-                      Boost.Python)</a>
-                    </li>
+                    <li><a href="#cplussig">Python C++-Sig (for
+                    Boost.Python)</a></li>
 
-                    <li>
-                      <a href="#langbinding">Language Binding</a>
-                    </li>
+                    <li><a href="#langbinding">Language Binding</a></li>
 
-                    <li>
-                      <a href="#mpi">Boost.MPI Development</a>
-                    </li>
+                    <li><a href="#mpi">Boost.MPI Development</a></li>
 
-                    <li>
-                      <a href="#spirit">Boost.Spirit</a>
-                    </li>
+                    <li><a href="#spirit">Boost.Spirit</a></li>
 
-                    <li>
-                      <a href="#boostdocs">Boost.Documentation</a>
-                    </li>
+                    <li><a href="#boostdocs">Boost.Documentation</a></li>
 
-                    <li>
-                      <a href="#testing">Testing</a>
-                    </li>
+                    <li><a href="#testing">Testing</a></li>
 
-                    <li>
-                      <a href="#ublas">Boost.uBlas (numerics)</a>
-                    </li>
+                    <li><a href="#ublas">Boost.uBlas (numerics)</a></li>
 
-                    <li>
-                      <a href="#thread">Boost.Thread</a>
-                    </li>
+                    <li><a href="#thread">Boost.Thread</a></li>
 
-                    <li>
-                      <a href="#commit">Subversion Commit messages</a>
-                    </li>
+                    <li><a href="#commit">Subversion Commit messages</a></li>
 
-                    <li>
-                      <a href="#translation">Translation Groups</a>
-                    </li>
+                    <li><a href="#translation">Translation Groups</a></li>
                   </ul>
                 </li>
 
-                <li>
-                  <a href="#sandbox">Boost Sandbox repository</a>
-                </li>
+                <li><a href="#sandbox">Boost Sandbox repository</a></li>
 
-                <li>
-                  <a href="#IRC">#boost IRC channel</a>
-                </li>
+                <li><a href="#IRC">#boost IRC channel</a></li>
               </ul>
 
               <h2><a name="users" id="users"></a>Boost Users mailing list
@@ -383,9 +347,10 @@ http://www.boost.org/development/website_updating.html
 
               <p><strong>Important:</strong> This mailing list is for the
               discussion of the specification and implementation of
-              Boost.Threads only — questions regarding usage should be
-              directed to the <a href="#users">Boost Users</a> list, or the
-              main <a href="#main">Boost developers</a> list.</p>
+              Boost.Threads only &acirc;&euro;&rdquo; questions regarding
+              usage should be directed to the <a href="#users">Boost
+              Users</a> list, or the main <a href="#main">Boost
+              developers</a> list.</p>
 
               <p>GMane provides <a href=
               "news://news.gmane.org/gmane.comp.lib.boost.threads.devel">NNTP
@@ -431,12 +396,11 @@ http://www.boost.org/development/website_updating.html
               add a link.</p>
 
               <ul>
-                <li>
-                  <a href=
-                  "http://groups.google.com/group/boost_doc_translation">Chinese
-                  translators group</a> (<a href=
-                  "http://code.google.com/p/boost-doc-zh/">main webpage</a>)
-                </li>
+                <li><a href=
+                "http://groups.google.com/group/boost_doc_translation">Chinese
+                translators group</a> (<a href=
+                "http://code.google.com/p/boost-doc-zh/">main
+                webpage</a>)</li>
               </ul>
 
               <h2>Boost <a name="sandbox" id="sandbox"></a>Sandbox</h2>
