--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -248,27 +248,6 @@ http://www.boost.org/development/website_updating.html
                   </tr>
 
                   <tr>
-		    <!-- Added July 2012 -->
-                    <td>TypeIndex</td>
-
-                    <td>Antony Polukhin</td>
-
-                    <td>
-		      <ul>
-			<li><a href="https://github.com/apolukhin/type_index/zipball/master">
-			    Source</a>
-			<li><a href="https://github.com/apolukhin/type_index">
-			    GitHub</a>
-			<li><a href="http://apolukhin.github.com/type_index/index.html">Documentation</a>
-		      </ul>
-		    </td>		      
-
-                    <td>Niall Douglas</td>
-
-                    <td>November 11, 2013 - November 20, 2013</td>
-                  </tr>
-
-                  <tr>
 		    <!-- Added September 2012 -->
                     <td>STL Extensions</td>
 
@@ -367,6 +346,19 @@ http://www.boost.org/development/website_updating.html
                   </tr>
                 </thead>
 
+                  <tr>
+		    <!-- Added July 2012 -->
+                    <td>TypeIndex</td>
+
+                    <td>Antony Polukhin</td>
+
+                    <td>Niall Douglas</td>
+
+                    <td>November 11, 2013 - November 20, 2013</td>
+
+		    <td>Pending</td>
+                  </tr>
+		  
 		  <tr>
                     <td>Boost 1.55.0 Released</td>
 
