TypeIndex Conditionally Accepted.

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -356,7 +356,8 @@ http://www.boost.org/development/website_updating.html
 
                     <td>November 11, 2013 - November 20, 2013</td>
 
-		    <td>Pending</td>
+		    <td><a href= 
+			   "http://lists.boost.org/boost-announce/2013/11/0389.php">Conditionally Accepted</a></td>
                   </tr>
 		  
 		  <tr>
