--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -306,6 +306,7 @@ http://www.boost.org/development/website_updating.html
 
                     <td>-</td>
                   </tr>
+
                   <tr>
 		    <!-- Added October 2013 -->
                     <td>Asynchronous File I/O</td>
@@ -317,6 +318,26 @@ http://www.boost.org/development/website_updating.html
 			<li><a href="https://github.com/BoostGSoC/boost.afio/archive/boost-peer-review.tar.gz">
 			    Source</a>
 			<li><a href="https://ci.nedprod.com/view/All/job/Boost.AFIO%20Build%20Peer%20Review%20Documentation/Boost.AFIO_Documentation/">
+			Documentation</a>
+		      </ul>
+		    </td>		      
+
+                    <td>Needed</td>
+
+                    <td>-</td>
+                  </tr>
+
+                  <tr>
+		    <!-- Added October 2013 -->
+                    <td>Fiber</td>
+
+                    <td>Oliver Kowalke</td>
+
+                    <td>
+		      <ul>
+			<li><a href="https://github.com/olk/boost-fiber">
+			    Source</a>
+			<li><a href="http://ok73.funpic.de/boost/libs/fiber/doc/html/index.html">
 			Documentation</a>
 		      </ul>
 		    </td>		      
