Updated our email addresses.

--- a/community/reviews.html
+++ b/community/reviews.html
@@ -313,8 +313,8 @@ http://www.boost.org/development/website_updating.html
               </ul>
 
               <p>The role of Boost Review Wizard is currently played by John
-              Phillips (phillips at mps dot ohio-state dot edu) and Ronald
-              Garcia (garcia at cs dot indiana dot edu).</p>
+              Phillips (johnphillipsithaca at gmail dot com) and Ronald
+              Garcia (rxg at cs dot ubc dot ca).</p>
 
               <h2><a name="Fast-Track" id="Fast-Track"></a>Fast Track
               Reviews</h2>
