--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -2871,13 +2871,14 @@ http://www.boost.org/development/website_updating.html
 
               <h2><a name="Managers" id="Managers"></a>Review Managers</h2>
 
-              <p>We try to rotate the task of Review Manager between
-              many experienced Boost members, both to ensure fairness,
-              and to spread the workload. If you would like to
-              volunteer to become a review manager, please contact
-              John Phillips (phillips at pacific dot mps dot
-              ohio-state dot edu) or Ronald Garcia (garcia at cs dot
-              indiana dot edu).</p>
+		  <p>We try to rotate the task of Review Manager between
+		    many experienced Boost members, both to ensure fairness,
+		    and to spread the workload. If you would like to
+		    volunteer to become a review manager, please contact
+		    Ronald Garcia (rxg at cs dot ubc dot ca) and
+		    John Phillips (johnphillipsithaca at gmail dot
+		    com).
+		  </p>
             </div>
           </div>
         </div>
