Added Application library.

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -328,7 +328,7 @@ http://www.boost.org/development/website_updating.html
                   </tr>
 
                   <tr>
-		    <!-- Added October 2013 -->
+		    <!-- Added December 2013 -->
                     <td>Fiber</td>
 
                     <td>Oliver Kowalke</td>
@@ -347,6 +347,47 @@ http://www.boost.org/development/website_updating.html
                     <td>-</td>
                   </tr>
 
+                  <tr>
+		    <!-- Added December 2013 -->
+                    <td>Application</td>
+
+                    <td>Renato Tegon Forti</td>
+
+                    <td>
+		      <ul>
+			<li><a href="https://github.com/retf/Boost.Application">
+			    Source</a>
+			<li><a href="http://www.dokfile.com/appbeta4/docs/libs/application/doc/html/index.html">
+			Documentation</a>
+		      </ul>
+		    </td>		      
+
+                    <td>Needed</td>
+
+                    <td>-</td>
+                  </tr>
+
+<!--
+                  <tr>
+		    <!-- Added December 2013 - >
+                    <td>Library Name</td>
+
+                    <td>Library Author</td>
+
+                    <td>
+		      <ul>
+			<li><a href="">
+			    Source</a>
+			<li><a href="">
+			Documentation</a>
+		      </ul>
+		    </td>		      
+
+                    <td>Needed</td>
+
+                    <td>-</td>
+                  </tr>
+		      -->
 		</tbody>
               </table>
 
