fixed some library statuses.

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -684,7 +684,7 @@ http://www.boost.org/development/website_updating.html
 			Pending</a></del><br/>
 		      <a href=
                     "http://lists.boost.org/boost-announce/2013/04/0379.php">
-			Accepted</a>
+			Accepted -- Added in 1.55</a>
 		    </td>
                   </tr>
 
@@ -1265,7 +1265,7 @@ http://www.boost.org/development/website_updating.html
 
                     <td><del><a href=
                     "http://lists.boost.org/boost-announce/2010/03/0256.php">
-		    Accepted Provisionally</a></<del><br/>
+		    Accepted Provisionally</a></del><br/>
 		    Accepted -- Added in 1.54</td>
                   </tr>
 
