Fiber has a review manager and a review date.

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -342,9 +342,9 @@ http://www.boost.org/development/website_updating.html
 		      </ul>
 		    </td>		      
 
-                    <td>Needed</td>
+                    <td>Nat Goodspeed</td>
 
-                    <td>-</td>
+                    <td>January 6, 2014 - January 15, 2014</td>
                   </tr>
 
                   <tr>
