Update repo info.

--- a/development/website_updating.html
+++ b/development/website_updating.html
@@ -50,7 +50,9 @@ http://www.boost.org/development/website_updating.html
               "https://github.com/boostorg/website/">git repository</a>.</p>
 
               <p>In progress work is on the <code>beta</code> branch, the
-              live website is on the <code>live</code>branch.</p>
+              live website is on the <code>master</code> branch. The website
+              is updated automatically from git repo. If you want to update
+              the website, please create a pull request.</p>
 
               <h2><a name="ExistingPage" id="ExistingPage"></a>Existing
               Page</h2>
