--- a/development/website_updating.html
+++ b/development/website_updating.html
@@ -51,7 +51,7 @@ http://www.boost.org/development/website_updating.html
 
               <p>In progress work is on the <code>beta</code> branch, the
               live website is on the <code>master</code> branch. The website
-              is updated automatically from git repo. If you want to update
+              is updated automatically from the git repo. If you want to update
               the website, please create a pull request.</p>
 
               <h2><a name="ExistingPage" id="ExistingPage"></a>Existing
