Fix formatting boo boo that local testing missed.

--- a/development/running_regression_tests.html
+++ b/development/running_regression_tests.html
@@ -87,12 +87,16 @@ http://www.boost.org/development/website_updating.html
                 "https://github.com/boostorg/boost/blob/develop/tools/regression/src/run.py">
                 run.py</a> script into that directory:</li>
                 
+                <blockquote>
+                
                 <ol>
                   <li>Open <a href="https://github.com/boostorg/boost/blob/develop/tools/regression/src/run.py">
                   run.py</a> script in your browser.</li>
                   <li>Click the <strong><em>Raw</em></strong> button.</li> 
                   <li>Save as <tt>run.py</tt> in the directory you just created.</li>
                 </ol>
+
+                </blockquote>
 
                 <li>
                   <p>Run "<code>python run.py [options] [commands]</code>"
