Change requirement from Subversion to Git.

--- a/development/running_regression_tests.html
+++ b/development/running_regression_tests.html
@@ -71,7 +71,7 @@ http://www.boost.org/development/website_updating.html
               <ul>
                 <li>Python (2.3 &le; version &lt; 3.0).</li>
 
-                <li>Subversion 1.4 or later (optional).</li>
+                <li>Git (recent version).</li>
 
                 <li>At least 5 gigabytes of disk space per compiler to be
                 tested.</li>
@@ -126,13 +126,11 @@ http://www.boost.org/development/website_updating.html
               server, everything should still "just work". In the rare cases
               when it doesn't, you can explicitly specify the proxy server
               parameters through the <tt>--proxy</tt> option, e.g.:</p>
-              <pre>
-python run.py ... <strong>--proxy=http://www.someproxy.com:3128</strong>
+              <pre>python run.py ... <strong>--proxy=http://www.someproxy.com:3128</strong>
 </pre>
 
               <h3>Options</h3>
-              <pre>
-commands: cleanup, collect-logs, get-source, get-tools, patch, regression,
+              <pre>commands: cleanup, collect-logs, get-source, get-tools, patch, regression,
 setup, show-revision, test, test-boost-build, test-clean, test-process, test-
 run, update-source, upload-logs
 
@@ -238,8 +236,7 @@ Options:
               <p>You can run <tt>run.py</tt> in <a href=
               "#incremental">incremental mode</a> by simply passing it an
               identically named command-line flag:</p>
-              <pre>
-python run.py ... <strong>--incremental</strong>
+              <pre>python run.py ... <strong>--incremental</strong>
 </pre>
 
               <h3>Getting sources from Tarball</h3>
@@ -250,8 +247,7 @@ python run.py ... <strong>--incremental</strong>
               client installed you can obtain the sources as tarballs
               (<tt>*.tar.gz</tt>). To indicate this pass an empty user to
               <tt>run.py</tt>:</p>
-              <pre>
-python run.py ... <strong>--user=</strong>
+              <pre>python run.py ... <strong>--user=</strong>
 </pre>
 
               <p><strong>Note</strong>: Both methods to obtain the sources
