Update test results for git branches.

--- a/development/testing.html
+++ b/development/testing.html
@@ -67,28 +67,28 @@ http://www.boost.org/development/website_updating.html
                 </tr>
 
                 <tr>
-                  <td>Main trunk</td>
+                  <td>Develop branch</td>
 
                   <td></td>
 
                   <td><a href=
-                  "tests/trunk/developer/summary.html">Summary</a></td>
+                  "tests/develop/developer/summary.html">Summary</a></td>
 
-                  <td><a href="tests/trunk/developer/issues.html">Unresolved
+                  <td><a href="tests/develop/developer/issues.html">Unresolved
                   Issues</a></td>
                 </tr>
 
                 <tr>
-                  <td>Release branch</td>
+                  <td>Master branch</td>
 
                   <td><a href=
-                  "tests/release/user/summary_release.html">Summary</a></td>
+                  "tests/master/user/summary_release.html">Summary</a></td>
 
                   <td><a href=
-                  "tests/release/developer/summary.html">Summary</a></td>
+                  "tests/master/developer/summary.html">Summary</a></td>
 
                   <td><a href=
-                  "tests/release/developer/issues.html">Unresolved
+                  "tests/master/developer/issues.html">Unresolved
                   Issues</a></td>
                 </tr><!--
                 <tr>
