Comment out snapshots, as they're not currently created.

--- a/development/testing.html
+++ b/development/testing.html
@@ -41,7 +41,7 @@ http://www.boost.org/development/website_updating.html
 
                 <li><a href="#Inspection">Inspection Reports</a></li>
 
-                <li><a href="#Snapshots">Snapshots</a></li>
+                <!-- <li><a href="#Snapshots">Snapshots</a></li> -->
 
                 <li><a href="#Introduction">More about regression
                 tests</a></li>
@@ -166,6 +166,7 @@ http://www.boost.org/development/website_updating.html
                 </tr>
               </table>
 
+              <!--
               <h2><a name="Snapshots" id="Snapshots"></a>Snapshots</h2>
 
               <p>Snapshots are used for quality control checks.&nbsp; The
@@ -188,6 +189,7 @@ http://www.boost.org/development/website_updating.html
 
               <p>The Subversion release branch can be checked out from
               http://svn.boost.org/svn/boost/branches/release.</p>
+              -->
 
               <h2><a name="Introduction" id="Introduction"></a>More about
               regression tests</h2>
