Update snapshot text for git.

--- a/development/testing.html
+++ b/development/testing.html
@@ -171,7 +171,7 @@ http://www.boost.org/development/website_updating.html
 
               <p>Snapshots are used for quality control checks.&nbsp; The
               Unix tarballs and Windows zipballs are identical except for the
-              line endings exported from Subversion.</p>
+              line endings exported from Git.</p>
 
               <p>Because the snapshots represent work-in-process, they may
               not be suitable for production use.</p>
@@ -187,8 +187,8 @@ http://www.boost.org/development/website_updating.html
                 </tr>
               </table>
 
-              <p>The Subversion release branch can be checked out from
-              http://svn.boost.org/svn/boost/branches/release.</p>
+              <p>The Git master branch can be checked out from
+              <a href="https://github.com/boostorg/boost">https://github.com/boostorg/boost</a>.</p>
               -->
 
               <h2><a name="Introduction" id="Introduction"></a>More about
