Replace comment out code with a simpler comment.
I didn't want to remove the actual links as they might be interesting.

--- a/development/testing.html
+++ b/development/testing.html
@@ -83,41 +83,15 @@ http://www.boost.org/development/website_updating.html
                   <td><a href=
                   "tests/master/developer/issues.html">Unresolved
                   Issues</a></td>
-                </tr><!--
-                <tr>
-                  <td>Release 1.35.0</td>
-
-                  <td><a href=
-                  "tests/release-1_35_0/user/summary_release.html">Summary</a></td>
-
-                  <td><a href=
-                  "tests/release-1_35_0/developer/summary.html">Summary</a></td>
-
-                  <td><a href=
-                  "tests/release-1_35_0/developer/issues.html">Unresolved
-                  Issues</a></td>
                 </tr>
+                <!--
+                    We used to generate pages for releases, haven't done that
+                    for some time, but 1.35 results are still at:
 
-                <tr>
-                  <td>Release 1.36.0</td>
-
-                  <td><em>Not generated</em></td>
-
-                  <td><em>Not generated</em></td>
-
-                  <td><em>Not generated</em></td>
-                </tr>
-
-                <tr>
-                  <td>Release 1.37.0</td>
-
-                  <td><em>Not available yet</em></td>
-
-                  <td><em>Not available yet</em></td>
-
-                  <td><em>Not available yet</em></td>
-                </tr>
--->
+                    http://www.boost.org/development/tests/release-1_35_0/user/summary_release.html
+                    http://www.boost.org/development/tests/release-1_35_0/developer/summary.html
+                    http://www.boost.org/development/tests/release-1_35_0/developer/issues.html
+                -->
               </table>
 
               <h2><a name="Inspection" id="Inspection"></a>Inspection
