Change trunk to develop, branches/release to master.

--- a/development/running_regression_tests.html
+++ b/development/running_regression_tests.html
@@ -176,9 +176,9 @@ Options:
   --skip-tests          do not run bjam; used for testing script changes
 </pre>
 
-              <p>To test trunk use "<code>--tag=trunk</code>" (the default),
-              and to test the release use
-              "<code>--tag=branches/release</code>". Or substitute any Boost
+              <p>To test develop use "<code>--tag=develop</code>",
+              and to test master use
+              "<code>--tag=master</code>". Or substitute any Boost
               tree of your choice.</p>
 
               <h3>Details</h3>
